src/tui/render/snapshots/flutter_demon__tui__render__tests__compact_normal.snap
---
source: src/tui/render/tests.rs
expression: term.content()
---
 Flutter Demon  [r] [R] [x] [d] [q]────┐
│                                      │
└──────────────────────────────────────┘
┌ Logs ────────────────────────────────┐
│                                      │
│        Waiting for Flutter...        │
│                                      │
│Make sure you're in a Flutter project │
│                                      │
└──────────────────────────────────────┘
────────────────────────────────────────
 ●
