src/tui/render/snapshots/flutter_demon__tui__render__tests__confirm_dialog_quit.snap
---
source: src/tui/render/tests.rs
expression: content
---
 Flutter Demon  │  flutter_app──────────────────────────[r] [R] [x] [d] [q]────┐
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Logs ────────────────────────────────────────────────────────────────────────┐
│                                                                              │
│                                 Not Connected                                │
│                                                                              │
│              ╭───────────── Quit Flutter Demon? ──────────────╮              │
│              │                                                │              │
│              │           You have 1 running session.          │              │
│              │    All Flutter processes will be terminated.   │              │
│              │                                                │              │
│              │                 [y] Yes  [n] No                │              │
│              │                                                │              │
│              │                                                │              │
│              ╰────────────────────────────────────────────────╯              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────
 ○ Not Connected │ ⬇ Auto 0/0
