src/tui/render/snapshots/flutter_demon__tui__render__tests__confirm_dialog_quit_multiple.snap
---
source: src/tui/render/tests.rs
expression: content
---
 Flutter Demon  │  flutter_app──────────────────────────[r] [R] [x] [d] [q]────┐
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Logs ────────────────────────────────────────────────────────────────────────┐
│                                                                              │
│                            Waiting for Flutter...                            │
│                                                                              │
│              ╭───────────── Quit Flutter Demon? ──────────────╮              │
│              │                                                │              │
│              │          You have 3 running sessions.          │              │
│              │    All Flutter processes will be terminated.   │              │
│              │                                                │              │
│              │                 [y] Yes  [n] No                │              │
│              │                                                │              │
│              │                                                │              │
│              ╰────────────────────────────────────────────────╯              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────
 ○ Starting │ ⬇ Auto 0/0
