src/tui/render/snapshots/flutter_demon__tui__render__tests__device_selector_empty.snap
---
source: src/tui/render/tests.rs
expression: content
---
 Flutter Demon  │  flutter_app──────────────────────────[r] [R] [x] [d] [q]────┐
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Logs ────────────────────────────────────────────────────────────────────────┐
│               ╭──────────── Select Target Device ────────────╮               │
│               │▶ + Launch Android Emulator...                │               │
│               │  + Launch iOS Simulator...                   │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │     ↑↓ Navigate  Enter Select  r Refresh     │               │
│               │                                              │               │
│               ╰──────────────────────────────────────────────╯               │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────
 ○ Not Connected │ ⬇ Auto 0/0
