src/tui/render/snapshots/flutter_demon__tui__render__tests__device_selector_with_devices.snap
---
source: src/tui/render/tests.rs
expression: content
---
 Flutter Demon  │  flutter_app──────────────────────────[r] [R] [x] [d] [q]────┐
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Logs ────────────────────────────────────────────────────────────────────────┐
│               ╭──────────── Select Target Device ────────────╮               │
│               │▶ Linux Desktop                    (physical) │               │
│               │  Pixel 5                          (physical) │               │
│               │  iPhone 14 Pro                   (simulator) │               │
│               │  ─────────────────────────────────────       │               │
│               │  + Launch Android Emulator...                │               │
│               │  + Launch iOS Simulator...                   │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               │     ↑↓ Navigate  Enter Select  r Refresh     │               │
│               │                                              │               │
│               ╰──────────────────────────────────────────────╯               │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────
 ○ Starting │ ⬇ Auto 0/0
