src/tui/render/snapshots/flutter_demon__tui__render__tests__loading.snap
---
source: src/tui/render/tests.rs
expression: content
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                    ┌──────────────────────────────────────┐                    
                    │              flutter_app             │                    
                    │                                      │                    
                    │ ⠋ [LOADING_MESSAGE]...│                    
                    │                                      │                    
                    │                                      │                    
                    │                                      │                    
                    └──────────────────────────────────────┘
