src/tui/render/snapshots/flutter_demon__tui__render__tests__long_project_name.snap
---
source: src/tui/render/tests.rs
expression: content
---
 Flutter Demon  │  my_extremely_long_flutter_application[r] [R] [x] [d] [q]and_o
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Logs ────────────────────────────────────────────────────────────────────────┐
│                                                                              │
│                            Waiting for Flutter...                            │
│                                                                              │
│                Make sure you're in a Flutter project directory               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────
 ● Running │ ⬇ Auto 0/0
