src/tui/render/snapshots/flutter_demon__tui__render__tests__no_project_name.snap
---
source: src/tui/render/tests.rs
expression: content
---
 Flutter Demon  │  flutter──────────────────────────────[r] [R] [x] [d] [q]────┐
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Logs ────────────────────────────────────────────────────────────────────────┐
│                                                                              │
│                                 Not Connected                                │
│                                                                              │
│                        Press + to start a new session                        │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────
 ○ Not Connected │ ⬇ Auto 0/0
